# nba-injury-prediction

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONVERSION_SUMMARY.md  Dockerfile  FAANG_READINESS.md  LICENSE  Makefile  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
analysis/: nba_injury_modeling.Rmd
config/: config.yaml
data/: README.md
docs/: api.md
notebooks/: exploratory_analysis.ipynb
results/: README.md
scripts/: demo_synthetic.py  generate_results.py  run_pipeline.py
src/: __init__.py  data_loader.py  evaluate.py  explainability.py  model.py  preprocessing.py  train.py
tests/: conftest.py  test_model.py  test_preprocessing.py  test_train.py
